trial signup and signin and profile not working